# intel-image-classification

./: .gitignore  README.md  dvc.yaml  metrics.json  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cml.yaml
data/raw/: seg_pred.dvc  seg_test.dvc  seg_train.dvc
intel_image_classification/: dataset.py  dataset_paths.py  evaluate.py  image_helpers.py  preprocess_dataset.py  train.py
