[tool.poetry]
name = "intel-image-classification"
version = "0.1.0"
description = "Classification of natural scenes around the world"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
preprocess-images = "intel_image_classification.preprocess_dataset:main"
train = "intel_image_classification.train:main"
evaluate = "intel_image_classification.evaluate:main"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
pandas = "^2.2.2"
seaborn = "^0.13.2"
tensorflow = "^2.16.1"
scikit-image = "^0.23.2"
dvc = "^3.51.2"
opencv-python = "^4.10.0.84"
dvc-s3 = "^3.2.0"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
